# mov-cli-openmovies

./: README.md  pyproject.toml
mov_cli_openmovies/: __init__.py  openmovies.py
